--- a/static/css/sass/_header.scss
+++ b/static/css/sass/_header.scss
@@ -1,10 +1,8 @@
 .header {
     padding: 10px 15px;
-    position: fixed;
-    width: 100%;
-    left: 0;
+    position: sticky;
     top: 0;
-    z-index: 99;
+    z-index: 10;
     border-bottom: 1px solid rgba(0, 0, 0, .1);
     background-color: #fff;
 }
